# OpenCV_proyecto_procesamiento

./: CLAUDE.md  CMakeLists.txt  README.md
src/: main.cpp
